refactor: optimize TMC processing using Optional and Stream API
- Replaced manual checks in TmcDictionary with Optional pipelines.
- Simplified hasTmc check by using anyMatch and OperationTableRow
  hasTmcList for better perfomance.
- Improved code readability and safety by removing potential NPE spots.